--- a/v1/CV.html
+++ b/v1/CV.html
@@ -7,12 +7,20 @@
 	</head>
 
 	<body>
+		<main>
 			<div id="liseret">
 				<h1> LIN Jiongjiong </h1>
 				<h3> Développeur Jeux vidéo </h3>
+				
 				<p id="pp"><a href="image/ppgrand.png" title="( ͡° ͜ʖ ͡°)" target="_blank"><img src="image/731183826272780388.png" alt="Photo de profil"></a></p>
 
-				<h4>INFORMATION</h4>
+				<!--
+				<div class="pp">
+					<a href="image/ppgrand.png" title="( ͡° ͜ʖ ͡°)" target="_blank"><img src="image/731183826272780388.png" alt="Photo de profil"></a>
+				</div>
+			-->
+
+				<h4>INFORMATION</h4> 
 				
 				<div class="infos">
 					<img src="image/tel.png" class="icon">
@@ -142,11 +150,7 @@
 				</section>
 
 			</div>
-
-		
-
-
-
+		</main>
 
 </body>
 </html>
