add image on position absolute

--- a/CV_Website.html
+++ b/CV_Website.html
@@ -11,10 +11,12 @@
 
 		<header>
 			<div class="triangle-green"></div>
+			<div class="photo"> <img src="image/731183826272780388.png" width="100%" height="100%" alt="Photo de profil"> </div>
+			<div class="triangle-gray"></div>
 		</header>
 
 		
-		<div class="triangle-gray"></div>
+
 		<section class="section_left">
 			
 	
