--- a/CV_Website.html
+++ b/CV_Website.html
@@ -11,14 +11,40 @@
 
 		<header>
 			<div class="triangle-green"></div>
-			<div class="photo"> <img src="image/731183826272780388.png" width="100%" height="100%" alt="Photo de profil"> </div>
-			<div class="triangle-gray"></div>
+			<div class="photo"> <img src="image/pp.png" width="100%" height="100%" alt="Photo de profil"> </div>
 		</header>
-
-		
-
+		<div class="triangle-gray"></div>
 		<section class="section_left">
-			
+
+			<div class="description">
+				<h2> Jiongjiong LIN </h2>
+				<p class = "post">Développeur Web & Jeux vidéo</p>
+			</div>
+
+			<h4>INFORMATION</h4>
+
+			<div class="infos">
+				<p><img src="image/tel.png" class="icon"><div class="put_center">06 52 07 45 46</div></p>
+			</div>
+			<div class="infos">
+				<p><img src="image/email.png" class="icon"><div class="put_center">lin98j@gmail.com</div></p>
+			</div>
+			<div class="infos">
+				<p><img src="image/date.png" class="icon"><div class="put_center">31/10/1998</div></p>
+			</div>
+			<div class="infos">
+				<p><img src="image/github.png" class="icon"><a href="https://github.com/Zukimojito"><div class="put_center">https://github.com/Zukimojito</div></a></p>
+			</div>
+
+			<h4>LANGUE</h4>
+
+			<div class="langue">
+				<p><b>Chinois</b> : Maternelle</p>
+				<p><b>Anglais</b> : Technique</p>
+				<p><b>Français</b> : Courant</p>
+			</div>
+
+			<h4>CENTRES D'INTÉRÊT</h4>
 	
 		</section>
 
