finish section_left

--- a/CV_Website.html
+++ b/CV_Website.html
@@ -15,7 +15,6 @@
 		</header>
 		<div class="triangle-gray"></div>
 		<section class="section_left">
-
 			<div class="description">
 				<h2> Jiongjiong LIN </h2>
 				<p class = "post">Développeur Web & Jeux vidéo</p>
@@ -45,6 +44,12 @@
 			</div>
 
 			<h4>CENTRES D'INTÉRÊT</h4>
+
+			<div class="hobby">
+				<p><b>Jeux vidéo</b> : Action, MMORPG, FPS, MOBA</p>
+				<p><b>Lecture</b> : Mangas, Roman</p>
+				<p><b>Sport</b> : Jogging, Badminton</p>
+			</div>
 	
 		</section>
 
@@ -56,13 +61,5 @@
 
 
 	</main>
-	
-
-
-
-
-
-
-
 </body>
 </html>
