--- a/CV_Website.html
+++ b/CV_Website.html
@@ -53,12 +53,24 @@
 	
 		</section>
 
-		
+		<section class="section_right">
+
+			<div class="banner">
+				<h5>FORMATIONS</h5>
+			</div>
+			
+
+			
 
 
 
+		</section>
 
+		<!-- End of section -->
 
+		<div class="end"> </div>
+
+        <hr class="light">
 
 	</main>
 </body>
