--- a/CV_Website.html
+++ b/CV_Website.html
@@ -46,11 +46,11 @@
 			<h4>CENTRES D'INTÉRÊT</h4>
 
 			<div class="hobby">
-				<p><b>Jeux vidéo</b> : Action, MMORPG, FPS, MOBA</p>
+				<p><b>Jeux</b> : Action, MMORPG, FPS, MOBA</p>
 				<p><b>Lecture</b> : Mangas, Roman</p>
 				<p><b>Sport</b> : Jogging, Badminton</p>
+				<p><b>Animé</b> : Action, Fantasy, Aventure</p>
 			</div>
-	
 		</section>
 
 		<section class="section_right">
@@ -105,11 +105,55 @@
 				<h5>EXPÉRIENCES PROFESSIONNELLES</h5>
 			</div>
 
+			<div class="experience">
+				<p><b>Janvier à Mars 2020 – développeur Web (stage) – Canopia Nature</b> </br>
+				- Mise à jour du site (ajout des nouveaux produits, Ajout des promotions et rédaction de contenus) </br>
+				- Amélioration du site web (SEO, méta-descriptions, Etc...)</br>
+				<u>Environnement technique</u> : WordPress</p>
 
+				<p><b>Mai à Août 2018 – Technicien - Boutique ASN Shop et XXL info - Paris 12e</b> </br>
+				- Accueil clientèle </br>
+				- Dépannage d’ordinateur </br>
+				- Installation OS </p>
+			</div>
+
+			<div class="banner_gray">
+				<h5>PROJETS D’ÉCOLE</h5>
+			</div>
+
+			<div class="projet">
+				<p><b>Juillet à Août 2021 – Développeur Web – CV - Personnel</b></br>
+				- Développement en html et css3 </br>
+				- Création du désign </br>
+				</p>
+
+				<p><b>Janvier à Juillet 2020 – Développeur & Game Design - Unity - AriseSquad - ESGI </b></br>
+				- Développement du système et le gameplay du jeu</br>
+				- Ajout des fonds sonores
+				</p>
+
+				<p><b>Janvier à Juillet 2020 – Développeur & Game Design - Unity - AriseSquad - ESGI </b></br>
+				- Création des modèles 3D (Blender) </br>
+				- Développement le système et le gameplay du jeu </br>
+				- Gestion du projet grâce au diagramme de Gantt
+				</p>
+			</div>
+
+			<div class="banner_gray">
+				<h5>COMPÉTENCES</h5>
+			</div>
+
+
+			<div class = "competence">
+					<ul>
+						<li><b>Langage</b> : C, C++, C#, python, HTML, CSS, JavaScript, TypeScript</li>
+						<li><b>BDD</b> : MYSQL, SQL, PHPMyAdmin</li>
+						<li><b>Systèmes</b> : Linux, Windows, Mac</li>
+						<li><b>Frameworks</b> : Qt creator, Angular</li>
+						<li><b>Outils</b> : Wampserver, PhotoShop, Paint, WPS Office, Processing, Blender 3D, Unity, VScode, Codeblocks, WordPress, Git</li>
+					</ul>
+			</div>
 			
-
-
-
 		</section>
 
 		<!-- End of section -->
