--- a/index.html
+++ b/index.html
@@ -122,14 +122,15 @@
 			</div>
 
 			<div class="projet">
+				<p><b>Août à Déc 2021 – Développeur python - Pygame - Swallowed Star - Personnel </b></br>
+				- Initialiser des classes python et gérer une boucle de jeu</br>
+				- Gérer les aspects graphiques avec le module pygame.draw</br>
+				- Gestion du son avec le module pygame.mixer et les collisions entre objets graphiques grâce à la notion de sprite
+				</p>
+
 				<p><b>Juillet à Août 2021 – Développeur Web – CV - Personnel</b></br>
 				- Développement en html et css3 </br>
 				- Création du désign </br>
-				</p>
-
-				<p><b>Janvier à Juillet 2020 – Développeur & Game Design - Unity - AriseSquad - ESGI </b></br>
-				- Développement du système et le gameplay du jeu</br>
-				- Ajout des fonds sonores
 				</p>
 
 				<p><b>Janvier à Juillet 2020 – Développeur & Game Design - Unity - AriseSquad - ESGI </b></br>
