--- a/index.html
+++ b/index.html
@@ -147,10 +147,10 @@
 
 			<div class = "competence">
 					<ul>
-						<li><b>Langage</b> : C, C++, C#, python, HTML, CSS, JavaScript, TypeScript</li>
+						<li><b>Langage</b> : C, C++, C#, python, HTML, CSS</li>
 						<li><b>BDD</b> : MYSQL, SQL, PHPMyAdmin</li>
 						<li><b>Systèmes</b> : Linux, Windows, Mac</li>
-						<li><b>Frameworks</b> : Qt creator, Angular</li>
+						<li><b>Frameworks</b> : Qt creator</li>
 						<li><b>Outils</b> : Wampserver, PhotoShop, Paint, WPS Office, Processing, Blender 3D, Unity, VScode, Codeblocks, WordPress, Git</li>
 					</ul>
 			</div>
