--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<section class="section_left">
 			<div class="description">
 				<h2> Jiongjiong LIN </h2>
-				<p class = "post">Développeur Web & Jeux vidéo</p>
+				<p class = "post">Développeur Web</p>
 			</div>
 
 			<h4>INFORMATION</h4>
@@ -147,11 +147,11 @@
 
 			<div class = "competence">
 					<ul>
-						<li><b>Langage</b> : C, C++, C#, python, HTML, CSS</li>
+						<li><b>Langage</b> : C, C++, C#, python, HTML, CSS, Javascript, Typescript</li>
 						<li><b>BDD</b> : MYSQL, SQL, PHPMyAdmin</li>
-						<li><b>Systèmes</b> : Linux, Windows, Mac</li>
-						<li><b>Frameworks</b> : Qt creator</li>
-						<li><b>Outils</b> : Wampserver, PhotoShop, Paint, WPS Office, Processing, Blender 3D, Unity, VScode, Codeblocks, WordPress, Git</li>
+						<li><b>Systèmes</b> : Linux, Windows</li>
+						<li><b>Frameworks</b> : Qt creator, React js, Bootstrap </li>
+						<li><b>Outils</b> : Wampserver, PhotoShop, Paint, WPS Office, Processing, Blender 3D, Unity, VScode, Codeblocks, Git</li>
 					</ul>
 			</div>
 			
