--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<section class="section_left">
 			<div class="description">
 				<h2> Jiongjiong LIN </h2>
-				<p class = "post">Développeur Web</p>
+				<p class = "post">Développeur Web Font-End</p>
 			</div>
 
 			<h4>INFORMATION</h4>
@@ -60,6 +60,22 @@
 			</div>
 
 			<div class="dashed_carrer">
+
+				<div class="year">
+					<p><b>2022-2024</b></p>
+				</div>
+
+				<div class="formation">
+					<div class="arrow_bot"></div>
+						<p>
+							<div class="text_top">
+								<b>Cycle Master - Architecte logiciel et développeur d’application</b>
+								- ETNA  École des Technologies Numériques Avancées (Bac+5)
+							</div>
+						</p>
+				 </div>
+
+
 				<div class="year">
 					<p><b>2019-2020</b></p>
 				</div>
@@ -95,7 +111,7 @@
 						<p>
 							<div class="text_top">
 								<b>Baccalauréat STI2D : Spécialité SIN</b>
-								- Lycée Dorian
+								- Lycée Dorian (Bac)
 							</div>
 						</p>
 				 </div>
@@ -150,7 +166,7 @@
 						<li><b>Langage</b> : C, C++, C#, python, HTML, CSS, Javascript, Typescript</li>
 						<li><b>BDD</b> : MYSQL, SQL, PHPMyAdmin</li>
 						<li><b>Systèmes</b> : Linux, Windows</li>
-						<li><b>Frameworks</b> : Qt creator, React js, Bootstrap </li>
+						<li><b>Frameworks</b> : Qt creator, React js, Bootstrap, Firebase </li>
 						<li><b>Outils</b> : Wampserver, PhotoShop, Paint, WPS Office, Processing, Blender 3D, Unity, VScode, Codeblocks, Git</li>
 					</ul>
 			</div>
