--- a/index.html
+++ b/index.html
@@ -64,10 +64,9 @@
               <h2>CENTRES D'INTÉRÊT</h2>
 
               <div class="hobby">
-                <p><b>Jeux</b> : Action, MMORPG, FPS, MOBA</p>
-                <p><b>Lecture</b> : Mangas, Roman</p>
-                <p><b>Sport</b> : Jogging, Badminton, Natation</p>
-                <p><b>Animé</b> : Action, Fantasy, Aventure</p>
+                <p><b>Loisirs</b> : Jeux vidéo, Lecture mangas, Sci-Fi </p>
+                <p><b>Sports</b> : Natation, Jogging, Badminton</p>
+                
               </div>
             </div>
           </div>
@@ -142,14 +141,14 @@
                 <h3>💡 PROJETS D’ÉCOLE</h3>
                 <div class="projet">
 
-                  <p><b>Développeur Font-end - React JS - Année 2022 </b></br>
+                  <p><b>Développeur Font-end - React JS - Personnel -Année 2022 </b></br>
                     - Utilisation des useState, useEffect, useLocation, useParams</br>
                     - Redux, L'API de Contexte, Router</br>
                     - Exemple de projet : Gallerie des chats, Blog, Slider, etc... <a href="https://github.com/Zukimojito/Projet-react" target="_blank">🔗</a>
                     </p>
 
 
-                  <p><b>Développeur python - Pygame - Swallowed Star - Année 2021 </b></br>
+                  <p><b>Développeur python - Pygame - Swallowed Star - Personnel -Année 2021 </b></br>
                   - Initialiser des classes python et gérer une boucle de jeu</br>
                   - Gérer les aspects graphiques avec le module pygame.draw</br>
                   - Gestion du son avec le module pygame.mixer et les collisions entre objets graphiques grâce à la notion de sprite
@@ -160,7 +159,7 @@
                   - Création du désign </br>
                   </p>
 
-                  <p><b>Développeur & Game Design - Unity - Projet Annuel - ESGI - Année 2020</b></br>
+                  <p><b>Développeur & Game Design - Unity - Projet Annuel - école ESGI - Année 2020</b></br>
                   - Création des modèles 3D (Blender) </br>
                   - Développement le système et le gameplay du jeu </br>
                   - Gestion du projet grâce au diagramme de Gantt
