--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CV LIN Jiongjiong ...</title>
+    <title>CV LIN Jiongjiong</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -109,7 +109,7 @@
                     </div>
 
                     <div class="formation-year">
-                      <p>2022-2024</p>
+                      <p>2015-2017</p>
                     </div>
                     <div class="flex-formation">
                       <div class="arrow_bot"></div>
