--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
             <div class="info-box">
               <img src="./image/adresse.png" class="icon" />
-              <p>Paris 75013</p>
+              <p>Paris</p>
             </div>
 
             <div class="info-box">
