--- a/index.html
+++ b/index.html
@@ -180,10 +180,10 @@
           <h3>🧠 COMPÉTENCES</h3>
           <div class="competence">
             <ul>
-              <li><b>Langage</b> : C, C++, C#, python, HTML, CSS, Javascript, Typescript, Unix shell</li>
+              <li><b>Langage</b> : C, C++, C#, python, HTML, CSS, Javascript, Typescript, Unix shell, PHP</li>
               <li><b>BDD</b> : MYSQL, SQL, PHPMyAdmin</li>
               <li><b>Systèmes</b> : Linux, Windows, Debian</li>
-              <li><b>Frameworks</b> : Qt creator, React js, Bootstrap, Firebase </li>
+              <li><b>Frameworks</b> : Qt creator, React js, Bootstrap, Firebase, Laravel </li>
               <li><b>Outils</b> : Wampserver, PhotoShop, Paint, WPS Office, Processing, Blender 3D, Unity, VScode,
                 Codeblocks, Git</li>
             </ul>
