--- a/index.html
+++ b/index.html
@@ -124,9 +124,6 @@
                 <p>- Lycée Dorian (Bac)</p>
               </div>
             </div> -->
-
-
-
           </div>
 
 
@@ -181,17 +178,15 @@
           <div class="competence">
             <ul>
               <li><b>Langage</b> : C, C++, C#, python, HTML, CSS, Javascript, Typescript, Unix shell, PHP</li>
-              <li><b>BDD</b> : MYSQL, SQL, PHPMyAdmin</li>
+              <li><b>BDD</b> : MYSQL, SQL, PHPMyAdmin, NodeJs</li>
               <li><b>Systèmes</b> : Linux, Windows, Debian</li>
               <li><b>Frameworks</b> : Qt creator, React js, Bootstrap, Firebase, Laravel </li>
-              <li><b>Outils</b> : Wampserver, PhotoShop, Paint, WPS Office, Processing, Blender 3D, Unity, VScode,
-                Codeblocks, Git</li>
+              <li><b>Outils</b> : Wampserver, XAMPP, PhotoShop, Paint, WPS Office, Processing, Blender 3D, Unity,
+                VScode, Codeblocks, Git
+              </li>
             </ul>
           </div>
-
         </div>
-
-
       </div>
     </div>
   </main>
